--- a/trunk/AndroidManifest.xml
+++ b/trunk/AndroidManifest.xml
@@ -14,10 +14,13 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
+
+<!-- Whenever the version changes here, it must also be changed in
+     the strings.xml file -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="net.tawacentral.roger.secrets"
-      android:versionCode="1"
-      android:versionName="1.0">
+      android:versionCode="3"
+      android:versionName="1.0.2">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <!-- I set the clearTaskOnLaunch so that when the user restarts
              secrets, they start with the login page.  Without this flag set,
@@ -26,6 +29,7 @@ limitations under the License.
              activity, bypassing login. -->
         <activity android:name=".LoginActivity"
                   android:label="@string/app_name"
+		          android:excludeFromRecents="true"
                   android:stateNotNeeded="true"
                   android:clearTaskOnLaunch="true">
             <intent-filter>
@@ -34,17 +38,19 @@ limitations under the License.
             </intent-filter>
         </activity>
         <!-- I set the excludeFromRecents flags so that when the device goes
-             to sleep or the user chages apps, these two activity do not
+             to sleep or the user changes apps, these two activity do not
              remain on the activity stack, and the user cannot come back to
              them at some later point.  This is to make sure the user always
              goes through the login activity after the device wakes up or the
              user changes to another apps and returns to secrets. -->
 		<activity android:name="SecretsListActivity"
 		          android:label="@string/list_name"
-		          android:excludeFromRecents="true"></activity>
+		          android:excludeFromRecents="true"
+		          android:finishOnTaskLaunch="true"></activity>
 		<activity android:name="AccessLogActivity"
 		          android:label="@string/log_name"
 		          android:excludeFromRecents="true"
-		          android:stateNotNeeded="true"></activity>
+		          android:stateNotNeeded="true"
+		          android:finishOnTaskLaunch="true"></activity>
 </application>
 </manifest> 
