--- a/trunk/AndroidManifest.xml
+++ b/trunk/AndroidManifest.xml
@@ -19,7 +19,7 @@ limitations under the License.
      the strings.xml file -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="net.tawacentral.roger.secrets"
-    android:versionCode="6" android:versionName="1.2.1">
+    android:versionName="1.2.2" android:versionCode="7">
   <application android:icon="@drawable/icon" android:label="@string/app_name">
     <!-- I set the clearTaskOnLaunch so that when the user restarts
          secrets, they start with the login page.  Without this flag set,
