--- a/trunk/AndroidManifest.xml
+++ b/trunk/AndroidManifest.xml
@@ -20,8 +20,9 @@ limitations under the License.
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="net.tawacentral.roger.secrets"
     android:versionName="1.4" android:versionCode="10">
-  <!--The app now uses some cupcake specific APIs to handle showing and
-      hiding the soft keyboard, so the minimum sdk version must reflect this -->
+  <!--For maximum compatibility with all Android devices, I am going to leave
+      the min sdk to 2, and check at runtime the actual version of the phone
+      before making API calls that are limited to newer versions -->
   <uses-sdk android:minSdkVersion="2"></uses-sdk>
   <application android:icon="@drawable/icon" android:label="@string/app_name">
     <!-- I set the clearTaskOnLaunch so that when the user restarts
