--- a/trunk/AndroidManifest.xml
+++ b/trunk/AndroidManifest.xml
@@ -19,7 +19,7 @@ limitations under the License.
      the strings.xml file -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="net.tawacentral.roger.secrets"
-    android:versionName="1.4.3" android:versionCode="13">
+    android:versionName="1.4.4" android:versionCode="14">
   <!--For maximum compatibility with all Android devices, I am going to leave
       the min sdk to 2, and check at runtime the actual version of the phone
       before making API calls that are limited to newer versions -->
@@ -34,7 +34,8 @@ limitations under the License.
         android:label="@string/app_name"
         android:excludeFromRecents="true"
         android:stateNotNeeded="true"
-        android:clearTaskOnLaunch="true">
+        android:clearTaskOnLaunch="true"
+        android:launchMode="singleTask">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
         <category android:name="android.intent.category.LAUNCHER" />
