--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -45,6 +45,7 @@ limitations under the License.
   <application android:icon="@drawable/icon"
       android:label="@string/app_name"
       android:allowBackup="true"
+      android:fullBackupOnly="true"
       android:backupAgent=".FileUtils$SecretsBackupAgent">
     <meta-data android:name="com.google.android.backup.api_key"
         android:value="AEdPqrEAAAAIiaTKLQX8KGBYlJtm_orjiPGWqNbppxZwGByuGA" />
