--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,10 @@
 apply plugin: 'com.android.application'
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    compileSdkVersion 25
 
     defaultConfig {
         applicationId "net.tawacentral.roger.secrets"
-        minSdkVersion 9
+        minSdkVersion 19
         targetSdkVersion 23
     }
 
@@ -15,6 +14,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
+    buildToolsVersion '26.0.2'
 }
 
 dependencies {
