--- a/build.gradle
+++ b/build.gradle
@@ -4,12 +4,18 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.0'
+        classpath 'com.android.tools.build:gradle:3.0.0'
     }
 }
-
 allprojects {
     repositories {
         jcenter()
     }
+}
+
+//android {
+//    compileSdkVersion 25
+//    buildToolsVersion '25.0.1'
+//}
+dependencies {
 }
