--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,7 @@ limitations under the License.
       android:label="@string/permission_osa_label"
       android:protectionLevel="dangerous" />
   <application android:icon="@drawable/icon"
+      android:theme="@android:style/Theme.DeviceDefault"
       android:label="@string/app_name"
       android:allowBackup="true"
       android:fullBackupOnly="true"
