--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,12 @@ android {
             storeFile file('/home/rogerta/src/apps.keystore')
             keyAlias 'Tawacentral.net'
         }
+        debug {
+            storeFile file('/home/test/.android/debug.keystore')
+            storePassword 'android'
+            keyPassword 'android'
+            keyAlias 'androiddebugkey'
+        }
     }
     compileSdkVersion 25
     defaultConfig {
@@ -20,7 +26,7 @@ android {
             signingConfig signingConfigs.config
         }
         debug {
-            signingConfig signingConfigs.config
+            signingConfig signingConfigs.debug
         }
     }
     productFlavors {
