Fixed use of /sdcard on API29.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,9 +24,11 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
             signingConfig signingConfigs.config
+            debuggable false
         }
         debug {
             signingConfig signingConfigs.debug
+            debuggable true
         }
     }
     productFlavors {
