--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,8 +19,8 @@ limitations under the License.
      the strings.xml file -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="net.tawacentral.roger.secrets"
-    android:versionName="2.10"
-    android:versionCode="59"
+    android:versionName="2.11"
+    android:versionCode="60"
     android:installLocation="auto">
   <!--Secrets supports Android 2.3 (SDK 9) or later only.  The main reasons for
       these restriction are:
@@ -42,7 +42,9 @@ limitations under the License.
       android:description="@string/permission_osa_desc"
       android:label="@string/permission_osa_label"
       android:protectionLevel="dangerous" />
+  <!-- TODO: Support scoped storage and remove "requestLegacyExternalStorage". -->
   <application android:icon="@drawable/icon"
+      android:requestLegacyExternalStorage="true"
       android:theme="@android:style/Theme.DeviceDefault"
       android:label="@string/app_name"
       android:allowBackup="true"
